--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engine": {"node":">=14.20.1"},
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
