--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engine": {"node":"14.17.0"},
+  "engines": {"node":">=14.20.10"},
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
